WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
40276
HTML5 Parser fails script-tests which use document.write
https://bugs.webkit.org/show_bug.cgi?id=40276
Summary
HTML5 Parser fails script-tests which use document.write
Eric Seidel (no email)
Reported
2010-06-07 19:08:44 PDT
HTML5 Parser fails script-tests which use document.write
Attachments
Patch
(2.87 KB, patch)
2010-06-07 19:17 PDT
,
Eric Seidel (no email)
abarth
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Seidel (no email)
Comment 1
2010-06-07 19:17:46 PDT
Created
attachment 58100
[details]
Patch
Eric Seidel (no email)
Comment 2
2010-06-07 19:26:20 PDT
Committed
r60814
: <
http://trac.webkit.org/changeset/60814
>
Eric Seidel (no email)
Comment 3
2010-06-07 20:04:48 PDT
This fixed 45 of the 152 remaining failures. :)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug